@@ -56,7 +56,7 @@ public:
 		{ return i > 0; }
 	void add(int v1);		// Append new instructions:
 	void add(int v1, int v2);
-	void add(int v1, char *str);
+	void add(int v1, const char *str);
 	void add(int *vals, int cnt);
 	Usecode_script& operator<<(int v)
 		{ add(v); return *this; }
